# realtimebattle

./: .gitignore  Dockerfile  Dockerfile.build-agent  README  README.md  config.h.in  configure  configure.in  rtbrc
.github/workflows/: build.yml  publish-build-agent.yml
Robots/: Makefile.am  Makefile.in
Robots/seek_and_destroy/: seek_and_destroy.cc
Robots/wonderbot/: Makefile.am  Makefile.in  wonderbot.cc
Robots/xt-bot/: xt-bot-a.cpp  xt-bot-b.cpp
docs/: README.md
include/: Vector2D.h
src/: Structs.cc
team-framework/bots/cobra/: cobra_clientspecificrepository.h
team-framework/io/: unixclientcommunicator.cpp  unixinstreambuf.cpp  unixoutstreambuf.cpp  unixremoteclientconnection.cpp  unixrtbconnection.cpp  unixservercommunicator.cpp  unixserverconnection.cpp
team-framework/parser/: configurationparser.h
